# arke-poc

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  documentation.sh  eclipse-formatter.xml
.circleci/: config.yml
Documentations/: Documentation.md
Sources/: main.cxx
Sources/arke/: Dependency.cxx  Dependency.hxx  DependencyBuilder.cxx  DependencyBuilder.hxx  DependencyDefinition.cxx  DependencyDefinition.hxx  FilesGroup.cxx  FilesGroup.hxx  HashFile.cxx  HashFile.hxx  Package.cxx  Package.hxx  VersionMatcher.cxx  VersionMatcher.hxx
Sources/arke/tools/: SHAGenerator.cxx  SHAGenerator.hxx
Sources/compression/: Compressor.cxx  Compressor.hxx  Decompressor.cxx  Decompressor.hxx  GzCompressor.cxx  GzCompressor.hxx  GzDecompressor.cxx  GzDecompressor.hxx  XzCompressor.cxx  XzCompressor.hxx  XzDecompressor.cxx  XzDecompressor.hxx
Sources/crypto/: SHAGenerator.cxx
Sources/dependency/: Dependency.cxx  Dependency.hxx  DependencyBuilder.cxx  DependencyBuilder.hxx  DependencyDecoder.cxx  DependencyDecoder.hxx  DependencyDefinition.cxx  DependencyDefinition.hxx  DependencyEncoder.cxx  DependencyEncoder.hxx
Sources/files/: FilesGroup.cxx  FilesGroup.hxx  FilesGroupBuilder.cxx  FilesGroupBuilder.hxx  FilesGroupDecoder.cxx  FilesGroupDecoder.hxx  FilesGroupEncoder.cxx  FilesGroupEncoder.hxx  HashFile.cxx
Sources/json/: JSONDecoder.cxx  JSONDecoder.hxx  JSONEncoder.cxx  JSONEncoder.hxx
Sources/package/: Package.cxx  Package.hxx  PackageBuilder.cxx  PackageBuilder.hxx  PackageDecoder.cxx  PackageDecoder.hxx  PackageEncoder.cxx  PackageEncoder.hxx
Sources/version/: VersionMatcher.cxx
Tests/: coverage.sh  main.cxx
Tests/arke/: DependencyCoder_test.cxx  DependencyDefinition_test.cxx  Dependency_test.cxx  FilesGroup_test.cxx  GzCompressor_test.cxx  GzDecompressor_test.cxx  HashFile_test.cxx  PackageBuilder_test.cxx  PackageCoder_test.cxx  PackageTools.hxx  Package_test.cxx  Target_test.cxx  VersionMatcher_test.cxx  XzCompressor_test.cxx  XzDecompressor_test.cxx
Tests/arke/tools/: SHAGenerator_test.cxx
Tests/catch/: catch.hpp  catch_reporter_tap.hpp
travis/: buildenv.sh
